# SyncRemnawave

./: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml  remnawave_sync.py  requirements.txt
.github/workflows/: ci.yml
